==> zetta-shao/G030_3220/Core/Src/ssd1306.c <==
#include "ssd1306.h"
#include <math.h>
#include <stdlib.h>
#include <string.h>  // For memcpy

void ssd1306_WriteCommand(struct tSSD1306 *d, uint8_t byte) {
    //HAL_I2C_Mem_Write(&SSD1306_I2C_PORT, SSD1306_I2C_ADDR, 0x00, 1, &byte, 1, HAL_MAX_DELAY);
    HAL_I2C_Mem_Write(d->pD, SSD1306_I2C_ADDR, 0x00, 1, &byte, 1, HAL_MAX_DELAY);
}

void ssd1306_WriteData(struct tSSD1306 *d, uint8_t* buffer, size_t buff_size) {
    //HAL_I2C_Mem_Write(&SSD1306_I2C_PORT, SSD1306_I2C_ADDR, 0x40, 1, buffer, buff_size, HAL_MAX_DELAY);
	HAL_I2C_Mem_Write(d->pD, SSD1306_I2C_ADDR, 0x40, 1, buffer, buff_size, HAL_MAX_DELAY);
}

void ssd1306_WriteCommand(struct tSSD1306 *d, uint8_t byte) {
    uint16_t tmp=0; uint8_t *pT=(uint8_t*)&tmp;
#if 0
	//uint8_t pT[2];
    HAL_GPIO_WritePin(d->CS_PORT, d->cs_pin, GPIO_PIN_RESET); // select OLED
	if((d->flag & __OLED_3WSPI) != 0) { //must set SPI 9bit data mode first
		pT[0] = byte; pT[1] = 0;
	    HAL_SPI_Transmit(d->pDev, pT, 1, HAL_MAX_DELAY);
	} else {
	    HAL_GPIO_WritePin(d->DC_PORT, d->dc_pin, GPIO_PIN_RESET); // command
    	HAL_SPI_Transmit(d->pDev, (uint8_t *) &byte, 1, HAL_MAX_DELAY);
	}
    HAL_GPIO_WritePin(d->CS_PORT, d->cs_pin, GPIO_PIN_SET); // un-select OLED
#else
    swspi_setgpo(&d->CS, 0); // select OLED
	if((d->hwflag & __OLED_3WSPI) != 0) { //must set SPI 9bit data mode first
		pT[0] = byte;
	    //HAL_SPI_Transmit(d->pDev, pT, 1, HAL_MAX_DELAY);
	    swspi_write(d->pDev, pT, 1);
	} else {
	    //HAL_GPIO_WritePin(d->DC_PORT, d->dc_pin, GPIO_PIN_RESET); // command
	    swspi_setgpo(&d->DC, 0); // data
    	//HAL_SPI_Transmit(d->pDev, (uint8_t *) &byte, 1, HAL_MAX_DELAY);
    	swspi_write(d->pDev, &byte, 1);
	}
	swspi_setgpo(&d->CS, 1); // un-select OLED

#endif
}

void ssd1306_WriteData(struct tSSD1306 *d, uint8_t* buffer, size_t buff_size) {
    uint16_t tmp=256; uint8_t *pT=(uint8_t*)&tmp;
#if 0
	//uint8_t pT[2];
    HAL_GPIO_WritePin(d->CS_PORT, d->cs_pin, GPIO_PIN_RESET); // select OLED
	if((d->flag & __OLED_3WSPI) != 0) { //must set SPI 9bit data mode first
	    for(pT[1]=1; buff_size>0; buff_size--, buffer++) {
	    	pT[0] = *buffer;
	    	HAL_SPI_Transmit(d->pDev, pT, 1, HAL_MAX_DELAY);
	    }
	} else {
	    HAL_GPIO_WritePin(d->DC_PORT, d->dc_pin, GPIO_PIN_SET); // data
	    HAL_SPI_Transmit(d->pDev, buffer, buff_size, HAL_MAX_DELAY);

	    HAL_GPIO_WritePin(d->DC_PORT, d->dc_pin, GPIO_PIN_RESET); // command
	}
    HAL_GPIO_WritePin(d->CS_PORT, d->cs_pin, GPIO_PIN_SET); // un-select OLED
#else
    swspi_setgpo(&d->CS, 0); // select OLED
    //HAL_GPIO_WritePin(d->CS_PORT, d->cs_pin, GPIO_PIN_RESET); // select OLED
	if((d->hwflag & __OLED_3WSPI) != 0) { //must set SPI 9bit data mode first
	    for(; buff_size>0; buff_size--, buffer++) {
	    	pT[0] = *buffer;
	    	//HAL_SPI_Transmit(d->pDev, pT, 1, HAL_MAX_DELAY);
	    	swspi_write(d->pDev, pT, 1);
	    }
	} else {
		swspi_setgpo(&d->DC, 1); // data
	    //HAL_SPI_Transmit(d->pDev, buffer, buff_size, HAL_MAX_DELAY);
		swspi_write(d->pDev, buffer, buff_size);
	    swspi_setgpo(&d->DC, 0); // command
	}
	swspi_setgpo(&d->CS, 1); // un-select OLED
	//HAL_GPIO_WritePin(d->CS_PORT, d->cs_pin, GPIO_PIN_SET); // select OLED
#endif
}

void SSD1306_init(struct tSSD1306 *d, void *pvport, void *pvFontDef) {
#if defined(SSD1306_USE_I2C)
	d->pDev = (swi2c_t*)pvport;
#elif defined(SSD1306_USE_SPI)
	d->pDev	= (swspi_t*)pvport;
#endif
    d->d.flags = (FONTDRAW_HEIGHTMUL | FONTDRAW_HEIGHTPREDIV | FONTDRAW_VERTICALDRAW);
    d->d.frameWidth = 128;
    d->d.frameHeight = 64;
    d->d.heightScale = 4; //2^4 = 128(weight)/8
    d->d.widthScale = 0;
    d->d.posmask = 7;
    d->d.invposmask = 0;
    d->d.oneLineOffsetSize = 16;
    d->d.pFrameBuf = d->SSD1306_Buffer;
    if(pvFontDef) d->d.pFont = (struct FontDef*)pvFontDef;
    d->d.color = 1;
    d->d.update = ssd1306_update;
    d->d.parent = d;
    // Reset OLED
    ssd1306_Reset(d);
    // Wait for the screen to boot
    HAL_Delay(100);
    // Init OLED
    ssd1306_SetDisplayOn(d, 0); //display off
    ssd1306_WriteCommand(d, 0x20); //Set Memory Addressing Mode
    ssd1306_WriteCommand(d, 0x00); // 00b,Horizontal Addressing Mode; 01b,Vertical Addressing Mode;
                                // 10b,Page Addressing Mode (RESET); 11b,Invalid
    ssd1306_WriteCommand(d, 0xB0); //Set Page Start Address for Page Addressing Mode,0-7

#ifdef SSD1306_MIRROR_VERT
    ssd1306_WriteCommand(d, 0xC0); // Mirror vertically
#else
    ssd1306_WriteCommand(d, 0xC8); //Set COM Output Scan Direction
#endif

    ssd1306_WriteCommand(d, 0x00); //---set low column address
    ssd1306_WriteCommand(d, 0x10); //---set high column address

    ssd1306_WriteCommand(d, 0x40); //--set start line address - CHECK

    ssd1306_SetContrast(d, 0xFF);

#ifdef SSD1306_MIRROR_HORIZ
    ssd1306_WriteCommand(d, 0xA0); // Mirror horizontally
#else
    ssd1306_WriteCommand(d, 0xA1); //--set segment re-map 0 to 127 - CHECK
#endif

#ifdef SSD1306_INVERSE_COLOR
    ssd1306_WriteCommand(d, 0xA7); //--set inverse color
#else
    ssd1306_WriteCommand(d, 0xA6); //--set normal color
#endif

// Set multiplex ratio.
#if (SSD1306_HEIGHT == 128)
    // Found in the Luma Python lib for SH1106.
    ssd1306_WriteCommand(d, 0xFF);
#else
    ssd1306_WriteCommand(d, 0xA8); //--set multiplex ratio(1 to 64) - CHECK
#endif

#if (SSD1306_HEIGHT == 32)
    ssd1306_WriteCommand(d, 0x1F); //
#elif (SSD1306_HEIGHT >= 64)
    ssd1306_WriteCommand(d, 0x3F); // Seems to work for 128px high displays too.
#else
#error "Only 32, 64, or 128 lines of height are supported!"
#endif

    ssd1306_WriteCommand(d, 0xA4); //0xa4,Output follows RAM content;0xa5,Output ignores RAM content

    ssd1306_WriteCommand(d, 0xD3); //-set display offset - CHECK
    ssd1306_WriteCommand(d, 0x00); //-not offset

    ssd1306_WriteCommand(d, 0xD5); //--set display clock divide ratio/oscillator frequency
    ssd1306_WriteCommand(d, 0xF0); //--set divide ratio

    ssd1306_WriteCommand(d, 0xD9); //--set pre-charge period
    ssd1306_WriteCommand(d, 0x22); //

    ssd1306_WriteCommand(d, 0xDA); //--set com pins hardware configuration - CHECK
#if (SSD1306_HEIGHT == 32)
    ssd1306_WriteCommand(d, 0x02);
#elif (SSD1306_HEIGHT >= 64)
    ssd1306_WriteCommand(d, 0x12);
#else
#error "Only 32, 64, or 128 lines of height are supported!"
#endif

    ssd1306_WriteCommand(d, 0xDB); //--set vcomh
    ssd1306_WriteCommand(d, 0x20); //0x20,0.77xVcc

    ssd1306_WriteCommand(d, 0x8D); //--set DC-DC enable
    ssd1306_WriteCommand(d, 0x14); //
    ssd1306_SetDisplayOn(d, 1); //--turn on SSD1306 panel

    // Clear screen
    ssd1306_Fill(d, Black);
    
    // Flush buffer to screen
    ssd1306_UpdateScreen(d);
    
    // Set default values for screen object
    d->d.curX = 0;
    d->d.curY = 0;
    d->hwflag |= __INITED;
}

char ssd1306_WriteChar(struct tSSD1306 *d, char ch, FontDef Font, SSD1306_COLOR color) {
    uint32_t i, b, j;

    // Check if character is valid
    if (ch < 32 || ch > 126)
        return 0;

    // Check remaining space on current line
    if (SSD1306_WIDTH < (d->d.curX + Font.FontWidth) ||
        SSD1306_HEIGHT < (d->d.curY + Font.FontHeight))
    {
        // Not enough space on current line
        return 0;
    }

    // Use the font to write
    for(i = 0; i < Font.FontHeight; i++) {
        b = Font.data[(ch - 32) * Font.FontHeight + i];
        for(j = 0; j < Font.FontWidth; j++) {
            if((b << j) & 0x8000)  {
                ssd1306_DrawPixel(d, d->d.curX + j, (d->d.curY + i), (SSD1306_COLOR) color);
            } else {
                ssd1306_DrawPixel(d, d->d.curX + j, (d->d.curY + i), (SSD1306_COLOR)!color);
            }
        }
    }

    // The current space is now taken
    d->d.curX += Font.FontWidth;

    // Return written char for validation
    return ch;
}

void ssd1306_SetCursor(struct tSSD1306 *d, uint8_t x, uint8_t y) {
    d->d.curX = x;
    d->d.curY = y;
}

void ssd1306_SetDisplayOn(struct tSSD1306 *d, const uint8_t on) {
    uint8_t value;
    if (on) {
        value = 0xAF;   // Display on
        //d->DisplayOn = 1;
        d->hwflag |= __DISPLAY_ON;
    } else {
        value = 0xAE;   // Display off
        //d->DisplayOn = 0;
        d->hwflag &= ~__DISPLAY_ON;
    }
    ssd1306_WriteCommand(d, value);
}

uint8_t ssd1306_GetDisplayOn(struct tSSD1306 *d) { return (d->hwflag & __DISPLAY_ON)?1:0; }
